--- a/web-interface/pyproject.toml
+++ b/web-interface/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = "^0.15.0"
 opencv-python = "^4.5.3"
 Jinja2 = "^3.0.1"
 websockets = "^10.0"
+aioredis = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
