--- a/image_gen/pyproject.toml
+++ b/image_gen/pyproject.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 description = ""
 authors = ["Christopher Sutton"]
 
+[[tool.poetry.source]]
+name = "piwheels"
+url = "https://www.piwheels.org/simple/"
+
 [tool.poetry.scripts]
 start = "image_gen.main:start"
 
@@ -11,7 +15,7 @@ start = "image_gen.main:start"
 python = "^3.7,<3.10"
 imutils = "^0.5.4"
 numpy = "^1.21.2"
-opencv-python = "^4.5.3"
+aioamqp = "^0.14.0"
 
 [tool.poetry.dev-dependencies]
 
