--- a/state_machine/pyproject.toml
+++ b/state_machine/pyproject.toml
@@ -10,6 +10,7 @@ start = "state_machine.main:start"
 [tool.poetry.dependencies]
 python = "^3.7"
 pika = "^1.2.0"
+aioamqp = "^0.14.0"
 
 [tool.poetry.dev-dependencies]
 
