--- a/web-interface/pyproject.toml
+++ b/web-interface/pyproject.toml
@@ -8,11 +8,10 @@ authors = ["Christopher Michael Sutton <christopher.sutton12@gmail.com>"]
 start = "web_interface.main:start"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "3.7.3"
 fastapi = "^0.68.1"
 uvicorn = "^0.15.0"
 Jinja2 = "^3.0.1"
-websockets = "^10.0"
 aioredis = "^2.0.0"
 aioamqp = "^0.14.0"
 
