--- a/web-interface/pyproject.toml
+++ b/web-interface/pyproject.toml
@@ -15,6 +15,7 @@ Jinja2 = "^3.0.1"
 aioredis = "^2.0.0"
 aioamqp = "^0.14.0"
 websockets = "^10.0"
+python-dotenv = "^0.19.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
